Nicer code + throwing exception instead of just creating one.